RL-88 truncate safari issue and RL-94 and RL-96 audio player updated from the new version of the design system (#44)

--- a/assets/scss/cards.scss
+++ b/assets/scss/cards.scss
@@ -37,12 +37,19 @@
 }
 
 .radiolab-card.v-card .card-blurb {
-    font-size: var(--font-size-5);
-    line-height: 20px;
     @include truncate();
     @include t3lines();
     @include media('>xl') {
         min-height: 60px;
+    }
+    * {
+        font-size: var(--font-size-5);
+        line-height: 20px;
+    }
+    // to fix ios safari text-overflow bug, I remove all but the first <p> or <div>
+    p:not(p:first-child),
+    div:not(div:first-child) {
+        display: none;
     }
 }
 
